--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,4 +1,9 @@
-%main.main
-  .row
-    .col.col-sm-12of12.col-lg-6of12.col-centered.heightz>
-      1
+.row
+  .col.col-sm-12of12.col-lg-3of12.heightz>
+    1
+  .col.col-sm-12of12.col-lg-3of12.heightz>
+    2
+  .col.col-sm-12of12.col-lg-3of12.heightz>
+    3
+  .col.col-sm-12of12.col-lg-3of12.heightz>
+    5
