--- a/app/assets/stylesheets/framework/components/_menu.scss
+++ b/app/assets/stylesheets/framework/components/_menu.scss
@@ -4,11 +4,19 @@
   height: 100%;
   left: 0;
   padding-top: 100px;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
 
-  @include clear-nav(sm);
+  @include clearNav(sm);
 
+  @each $size in $screen-sizes {
 
+    $viewport: nth($size, 1);
+    $modifier: nth($size, 2);
+
+    @media #{$viewport} {
+      @include clearNav($modifier);
+    }
+  }
 }
