--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,9 +1,16 @@
 .row
-  .col.col-sm-12of12.col-lg-3of12.heightz>
+  .col.col-sm-12of12.col-lg-4of12.heightz
     1
-  .col.col-sm-12of12.col-lg-3of12.heightz>
+  .col.col-sm-12of12.col-lg-4of12.heightz
     2
-  .col.col-sm-12of12.col-lg-3of12.heightz>
+  .col.col-sm-12of12.col-lg-4of12.heightz
     3
-  .col.col-sm-12of12.col-lg-3of12.heightz>
-    5
+.row
+  .col.col-sm-12of12.col-lg-3of12.heightz
+    4
+  .col.col-sm-12of12.col-lg-3of12.heightz
+    3
+  .col.col-sm-12of12.col-lg-3of12.heightz
+    2
+  .col.col-sm-12of12.col-lg-3of12.heightz
+    1
