--- a/app/assets/stylesheets/framework/components/_main.scss
+++ b/app/assets/stylesheets/framework/components/_main.scss
@@ -2,26 +2,8 @@ main {
   box-sizing: border-box;
   height: 100%;
   left: 0;
+  overflow-y: auto;
   position: fixed;
   top: 0;
   width: 100%;
-}
-
-.content {
-  @include clearNav(sm);
-
-  background-image: black image-url("SkylineBlack2.jpg") no-repeat;
-  background-size: cover;
-  box-sizing: border-box;
-  overflow: auto;
-
-  @each $size in $screen-sizes {
-
-    $viewport: nth($size, 1);
-    $modifier: nth($size, 2);
-
-    @media #{$viewport} {
-      @include clearNav($modifier);
-    }
-  }
 }
