--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -67,7 +67,7 @@ $base-transition: 0.2s;
 
 $golden-ratio: 1.61803398875;
 $golden-inverse: 0.61803398875;
-$color-primary: black;
-$color-secondary: black;
-$color-tertiary: black;
+$color-primary: $light-green;
+$color-secondary: $dark-green;
+$color-tertiary: $black;
 
