--- a/app/views/main_pages/home.html.haml
+++ b/app/views/main_pages/home.html.haml
@@ -1,16 +1,29 @@
-.row
-  .col.col-sm-12of12.col-lg-4of12.heightz
-    1
-  .col.col-sm-12of12.col-lg-4of12.heightz
-    2
-  .col.col-sm-12of12.col-lg-4of12.heightz
-    3
-.row
-  .col.col-sm-12of12.col-lg-3of12.heightz
-    4
-  .col.col-sm-12of12.col-lg-3of12.heightz
-    3
-  .col.col-sm-12of12.col-lg-3of12.heightz
-    2
-  .col.col-sm-12of12.col-lg-3of12.heightz
-    1
+%section.section.section-clearLeft.home
+  .row.row-fill
+    .col.col-sm-12of12.col-md-10of12.col-centered
+      .content
+        %h1
+          WE ARE
+          %br
+          %span BIG CORPORATION
+        %h3 I'm Chris.
+%section.section.section-clearLeft
+  .row.row-fill
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      4
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      3
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      2
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      1
+%section.section.section-clearLeft
+  .row.row-fill
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      4
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      3
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      2
+    .col.col-sm-12of12.col-lg-3of12.heightz
+      1
