--- a/app/assets/stylesheets/framework/components/_button.scss
+++ b/app/assets/stylesheets/framework/components/_button.scss
@@ -8,9 +8,11 @@
   @include stdBg();
   @include stdColor();
   @include stdFloat();
+  @include stdSpacing();
 
   border: none;
   box-sizing: border-box;
+  font-family: $font-family-sans;
   line-height: 1;
   outline: 0;
   position: relative;
@@ -84,6 +86,14 @@
       &:before { transform: rotate(-45deg); }
       &:after { transform: rotate(-135deg); }
     }
+  }
+
+  &-logo {
+    background-color: black;
+    color: white;
+    font-style: oblique;
+    font-weight: 700;
+    text-align: left;
   }
 
     // SIZE //
