--- a/app/assets/stylesheets/framework/functions/scaling/_general.scss
+++ b/app/assets/stylesheets/framework/functions/scaling/_general.scss
@@ -124,35 +124,35 @@
   @return $ret;
 }
 
-/// Returns the CSS values for padding scaled to the desired viewport size
+/// Returns the CSS values for spacing scaled to the desired viewport size
 ///
-/// @param {Number} $padding [null]
+/// @param {Number} $spacing [null]
 /// Map of the element to be sized. Example: $btn, $navbar
 ///
 /// @param {String} $modifier [null]
 /// Name of the modifier to be used. Example: sm, md, lg
 ///
 /// @param {Number} $ratio [null]
-/// Ratio of horizontal to vertical padding. Example: 2 would produce horizontal
-/// padding twice the width of the vertical padding, and .333 would produce
-/// horizontal padding 1/3 the width of the vertical padding. Vertical padding
+/// Ratio of horizontal to vertical spacing. Example: 2 would produce horizontal
+/// spacing twice the width of the vertical spacing, and .333 would produce
+/// horizontal spacing 1/3 the width of the vertical spacing. Vertical spacing
 /// is always the base value (the ratio will always be 1:xxx vert:horiz)
 ///
 /// @return {Number}
 ///
 
-@function scale-padding(
-  $padding: null,
+@function scale-spacing(
+  $spacing: null,
   $modifier: null,
   $ratio: 1
 ) {
 
-  $error: number-error($padding);
+  $error: number-error($spacing);
   $error: string-error($modifier);
 
-  $scaled-padding: scale-responsive($padding, $modifier);
+  $scaled-spacing: scale-responsive($spacing, $modifier);
 
-  $ret: $scaled-padding $ratio * $scaled-padding;
+  $ret: $scaled-spacing $ratio * $scaled-spacing;
 
   @return $ret;
 }
