--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,5 @@
 
   %body
     %main
-      .content.content-clearTransTop.content-clearTransRight
-        = yield
-    = render "shared/nav"
+      = yield
+    = render partial: "shared/nav"
